@@ -7,6 +7,10 @@ all_from       'lib/Class/Method/Modifiers.pm';
 githubmeta;
 
 test_requires 'Test::Fatal';
+test_requires 'Test::More';
+test_requires 'Test::Requires';
+
+author_requires 'Class::MOP';
 
 WriteAll;
 
